<resources>
    <string name="app_name">Hello World</string>
    <string name="tw1">Hello Kitty</string>
    <string name="ib2">picturecat</string>
    <string name="ib1">Введите имя кота</string>
    <string name="button1">Поздороваться</string>
    <string name="button2">Считаем ворон</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">Красный</string>
    <string name="yellow">Желтый</string>
    <string name="green">Зеленый</string>
    <string name="goTwo">Go To Activity Two</string>
    <string name="thisTwo">This Is Activity Two</string>
    <string name="goThr">Go To Activity Three</string>
    <string name="thisThr">This Is Activity Three</string>
</resources>
