<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.firsttest.helloworld.DisplayActivity"
    android:id="@+id/relativeLayout">


    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:id="@+id/buttonRed"
        android:layout_marginTop="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/redColor" />

    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:id="@+id/buttonYellow"
        android:background="@color/yellowColor"
        android:layout_below="@+id/buttonRed"
        android:layout_alignLeft="@+id/buttonRed"
        android:layout_alignStart="@+id/buttonRed" />

    <Button
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:id="@+id/buttonGreen"
        android:background="@color/greenColor"
        android:layout_below="@+id/buttonYellow"
        android:layout_alignLeft="@+id/buttonYellow"
        android:layout_alignStart="@+id/buttonYellow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thisTwo"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goThr"
        android:id="@+id/btnActThr"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>